--- a/src/external/glfw/CMakeLists.txt
+++ b/src/external/glfw/CMakeLists.txt
@@ -336,9 +336,9 @@ write_basic_package_version_file(src/glfw3ConfigVersion.cmake
                                  VERSION ${GLFW_VERSION}
                                  COMPATIBILITY SameMajorVersion)
 
-configure_file(CMake/glfw_config.h.in src/glfw_config.h @ONLY)
+configure_file(src/glfw_config.h.in src/glfw_config.h @ONLY)
 
-configure_file(CMake/glfw3.pc.in src/glfw3.pc @ONLY)
+configure_file(CMake/glfw3.pc.in CMake/glfw3.pc @ONLY)
 
 #--------------------------------------------------------------------
 # Add subdirectories
