Removing test file.
This test file is just testing compilation with the library works correctly but is no longer needed because:
- it is not cross platform
- it taps into the CTest system which is better suited for real unit/integration tests
- it can be incorporated into the pipeline of github actions instead in the future

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,12 +41,12 @@ jobs:
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: cmake --build . --config $env:BUILD_TYPE
 
-#      - name: Test
-#        working-directory: ${{github.workspace}}/build
-#        shell: powershell
-#        # Execute tests defined by the CMake configuration.
-#        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-#        run: ctest -C $env:BUILD_TYPE
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+        shell: powershell
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C $env:BUILD_TYPE
 
   build_linux:
     name: Linux Build
@@ -85,9 +85,9 @@ jobs:
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: cmake --build . --config $BUILD_TYPE
 
-#      - name: Test
-#        working-directory: ${{github.workspace}}/build
-#        shell: bash
-#        # Execute tests defined by the CMake configuration.
-#        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-#        run: ctest -C $BUILD_TYPE
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C $BUILD_TYPE
