--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -86,11 +86,7 @@ if (${PLATFORM} MATCHES "Desktop")
     target_link_libraries(raylib glfw)
 endif ()
 
-# Adding compile definitions
-target_compile_definitions(raylib
-                           PUBLIC "${PLATFORM_CPP}"
-                           PUBLIC "${GRAPHICS}"
-                           )
+include(CompileDefinitions)
 
 # Registering include directories
 target_include_directories(raylib
@@ -99,7 +95,6 @@ target_include_directories(raylib
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                            PRIVATE
                            ${CMAKE_CURRENT_SOURCE_DIR}
-                           ${CMAKE_BINARY_DIR} # For cmake/config.h
                            ${OPENGL_INCLUDE_DIR}
                            ${OPENAL_INCLUDE_DIR}
                            )
