Removing config.h.in file (#1546)
CMake relied on this file for configurations and also was interfering in the regular config.h by having a separate definition if building with CMake. This was not entirely correct so instead we will define compile time definitions separately through CMake (CompileDefinitions.cmake) and also will use the provided EXTERNAL_CONFIG_FLAGS that I found that will not use config.h in through the build process.

I also introduced a new compiler option (CUSTOMIZE_BUILD) that when OFF will use the default config.h and when ON will show other options for redefining your own options.

Fixed an error in rlgl.h where if you have both RLGL_STANDALONE and SUPPORT_VR_SIMULATOR you get a compile time error.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -83,11 +83,7 @@ if (${PLATFORM} MATCHES "Desktop")
     target_link_libraries(raylib glfw)
 endif ()
 
-# Adding compile definitions
-target_compile_definitions(raylib
-                           PUBLIC "${PLATFORM_CPP}"
-                           PUBLIC "${GRAPHICS}"
-                           )
+include(CompileDefinitions)
 
 # Registering include directories
 target_include_directories(raylib
@@ -96,7 +92,6 @@ target_include_directories(raylib
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                            PRIVATE
                            ${CMAKE_CURRENT_SOURCE_DIR}
-                           ${CMAKE_BINARY_DIR} # For cmake/config.h
                            ${OPENGL_INCLUDE_DIR}
                            ${OPENAL_INCLUDE_DIR}
                            )
