--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -71,6 +71,8 @@ jobs:
     - name: Generate Artifacts
       run: |
         cp -v ./src/raylib.h ./build/${{ env.RELEASE_NAME }}/include
+        cp -v ./README.md ./build/${{ env.RELEASE_NAME }}/README.md
+        cp -v ./LICENSE ./build/${{ env.RELEASE_NAME }}/LICENSE
         cd build
         tar -czvf ${{ env.RELEASE_NAME }}.tar.gz ${{ env.RELEASE_NAME }}
         
